--- a/at_generator/components/starterkit/styles/uikit/components/mixins/_menu-dropmenu.scss
+++ b/at_generator/components/starterkit/styles/uikit/components/mixins/_menu-dropmenu.scss
@@ -81,11 +81,11 @@
           }
 
           .menu {
-            display: none;
             position: absolute;
+            visibility: hidden;
+            opacity: 0;
             margin: 0;
             padding: 0;
-            transition: $global-transition;
 
             .menu__item {
               min-width: $dropmenu-item-width;
@@ -101,9 +101,19 @@
           &:hover,
           &:focus {
             > .menu {
-              display: block;
+              visibility: visible;
+              opacity: 1;
             }
           }
+        }
+      }
+
+      // Allow for momentary mouse out, a more forgiving menu.
+      .menu {
+        transition: 0.15s 0.5s;
+
+        &:hover .menu {
+          transition-delay: 0s;
         }
       }
 
@@ -112,7 +122,7 @@
         ul {
           #{$flow-from}: 0; // LTR
           top: auto;
-          //> li a {background-color: pink;}
+          //> li a {background-color: pink;} // debug
 
           @if $dropmenu-arrows == true {
             // FontAwesome loaded.
@@ -131,7 +141,7 @@
           .odd {
             #{$flow-from}: 100%; // LTR
             top: 0;
-            //> li a {background-color: yellow;}
+            //> li a {background-color: yellow;} // debug
 
             @if $dropmenu-arrows == true {
               // FontAwesome loaded.
@@ -147,4 +157,3 @@
     }
   }
 }
-
