--- a/at_generator/components/starterkit/styles/uikit/components/partials/_variables.scss
+++ b/at_generator/components/starterkit/styles/uikit/components/partials/_variables.scss
@@ -303,6 +303,7 @@ $resp-menu-active-color            : inherit;
 $resp-menu-hover-background-color  : rgba(255, 255, 255, 0.095);
 $resp-menu-active-background-color : rgba(255, 255, 255, 0.095);
 
+$resp-menu-z-index                  : 480;
 
 // Drop Menu
 // -----------------------------------------------------------------------------
